--- a/portfolio.html
+++ b/portfolio.html
@@ -15,13 +15,14 @@
         integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q=="
         crossorigin="anonymous" referrerpolicy="no-referrer"/>
     <link rel="stylesheet" href="./styles/styles.css"/>
+    <link rel="stylesheet" href="./css/main.min.css"/>
 </head>
 
 <body>
     <header>
         <div class="container">
-            <div class="header-container">
-                <a class=" header link-logo" href="./index.html"><span class="logo">Web</span><span
+            <div class="header__container">
+                <a class="header link-logo" href="./index.html"><span class="logo">Web</span><span
                         class="logo-studio">Studio</span></a>
                 <ul class="site-nav">
                     <li><a class="link" href="./index.html">Студія</a></li>
@@ -29,15 +30,15 @@
                     <li><a class="link" href="#">Контакти</a></li>
                 </ul>
                 <ul class="contacts">
-                    <li class="contacts-item"><a class="link email" href="meilto:info@devstudio.com">
-                            <span class="contacts-list">
-                                <svg class="contacts-icon" width="16" height="12">
+                    <li class="contacts__item"><a class="link email" href="meilto:info@devstudio.com">
+                            <span class="contacts__list">
+                                <svg class="contacts__icon" width="16" height="12">
                                     <use href="./img/icon.svg#icon-envelope"></use>
                                 </svg>info@devstudio.com
                             </span></a></li>
-                    <li class="contacts-item"><a class="link tel" href="tel:+380961111111">
-                            <span class="contacts-list">
-                                <svg class="contacts-icon" width="10" height="16">
+                    <li class="contacts__item"><a class="link tel" href="tel:+380961111111">
+                            <span class="contacts__list">
+                                <svg class="contacts__icon" width="10" height="16">
                                     <use href="./img/icon.svg#icon-smartphone"></use>
                                 </svg>+38 096 111 11 11
                             </span></a></li>
@@ -211,61 +212,61 @@
 
     <footer>
         <div class="container">
-            <div class="footer-container">
-                <div class="address-container">
+            <div class="footer__container">
+                <div class="address__container">
                     <a class="link-logo" href="./index.html"><span class="logo">Web</span><span
                             class="logo-studio">Studio</span></a>
                     <address class="address">
-                        <ul class="address-items">
-                            <li class="footer-items">
+                        <ul class="address__list">
+                            <li class="address__items">
                                 <a class="link address"
                                     href="https://www.google.com/maps/place/бульвар+Лесі+Українки,+26,+Київ,+02000/@50.4265807,30.5361971,17z/data=!3m1!4b1!4m5!3m4!1s0x40d4cf0e033ecbe9:0x57a4dffefec77da0!8m2!3d50.4265807!4d30.5383858">
-                                    <span class="link address-item">
+                                    <span class="link address-mailing">
                                         м. Київ, пр-т Лесі Українки, 26
                                     </span></a>
                             </li>
-                            <li class="footer-items">
+                            <li class="address__items">
                                 <a class="link email" href="meilto:info@devstudio.com"><span
                                         class="link item">info@devstudio.com</span></a>
                             </li>
-                            <li class="footer-items">
+                            <li class="address__items">
                                 <a class="link tel" href="tel:+380961111111"><span class="link item">+38 096 111 11
                                         11</span></a>
                             </li>
                         </ul>
                     </address>
                 </div>
-                <div class="connect-container">
-                    <h4 class="connect-title">Приєднуйтесь</h4>
-                    <ul class="connect-list">
-                        <li class="connect-item"><a href="" class="connect-link">
-                                <svg class="connect-icon" width="20" height="20">
+                <div class="connect__container">
+                    <h4 class="connect__title">Приєднуйтесь</h4>
+                    <ul class="connect__list">
+                        <li class="connect__item"><a href="" class="connect__link">
+                                <svg class="connect__icon" width="20" height="20">
                                     <use href="./img/icon.svg#icon-instagram"></use>
                                 </svg>
                             </a></li>
-                        <li class="connect-item"><a href="" class="connect-link">
-                                <svg class="connect-icon" width="20" height="20">
+                        <li class="connect__item"><a href="" class="connect__link">
+                                <svg class="connect__icon" width="20" height="20">
                                     <use href="./img/icon.svg#icon-twitter"></use>
                                 </svg>
                             </a></li>
-                        <li class="connect-item"><a href="" class="connect-link">
-                                <svg class="connect-icon" width="20" height="20">
+                        <li class="connect__item"><a href="" class="connect__link">
+                                <svg class="connect__icon" width="20" height="20">
                                     <use href="./img/icon.svg#icon-facebook"></use>
                                 </svg>
                             </a></li>
-                        <li class="connect-item"><a href="" class="connect-link">
-                                <svg class="connect-icon" width="20" height="20">
+                        <li class="connect__item"><a href="" class="connect__link">
+                                <svg class="connect__icon" width="20" height="20">
                                     <use href="./img/icon.svg#icon-linkedin"></use>
                                 </svg>
                             </a></li>
                     </ul>
                 </div>
-                <div class="subscribe-container">
-                    <h4 class="connect-title">Підпишіться на розсилку</h4>
-                    <form name="subscribe-form" autocomplete="off" novalidate>
+                <div class="subscribe__container">
+                    <h4 class="connect__title">Підпишіться на розсилку</h4>
+                    <form name="subscribe__form" autocomplete="off" novalidate>
                         <div class="subscribe">
-                            <input type="email" name="subscribe-email" class="subscribe-input" placeholder="E-mail">
-                            <button class="subscribe-button" type="submit">Підписатися</button>
+                            <input type="email" name="subscribe-email" class="subscribe__input" placeholder="E-mail">
+                            <button class="subscribe__button" type="submit">Підписатися</button>
                         </div>
                     </form>
                 </div>
