--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
             integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q=="
             crossorigin="anonymous" referrerpolicy="no-referrer"/>
-    <link rel="stylesheet" href="./styles/styles.css"/>
     <link rel="stylesheet" href="./css/main.min.css"/>
 </head>
 <body>
@@ -81,7 +80,7 @@
         <section class="section__activities">
             <div class="container">
                 <h2 class="activities title">Чим ми займаємося</h2>
-                <ul class="activities__items">
+                <ul class="activities__list">
                     <li>
                         <div class="activities__card">
                             <img src="./img/box1.jpg" alt="Десктопні додатки" height="294" width="370">
